# MoviesGRS_MFDP

./: .gitattributes  .pre-commit-config.yaml  Dockerfile  MovEm_eval.ipynb  MovEm_eval_ts_extended.ipynb  MovieEmbeddings.ipynb  README.md  SVD.ipynb  SVD_eval.ipynb  SVD_eval_ts_extended.ipynb  SVD_hyperparams.ipynb  app.py  baseline.ipynb  baseline_ts_extended.ipynb  evaluation.py  movies.feather  movies_data_preprocessing.ipynb  pyproject.toml  randomrec.ipynb  ratings_data_preprocessing.ipynb  recommender.py  recommender_data_preprocessor.py  requirements.txt  split_users.py  svd_trained.pkl  toppoprec.ipynb
data/: groups5.pq  groups6.pq  groups7.pq  movies_train.pq  ratings_test.pq  ratings_train.pq
experiments/models/: MovieEmbeddings_cosine.ipynb  MovieEmbeddings_euclidean.ipynb  SVD.ipynb  SVD_hyperparams.ipynb  randomrec.ipynb  toppoprec.ipynb
experiments/preprocessing/: EDA.ipynb  movies_data_preprocessing.ipynb  ratings_data_preprocessing.ipynb  split_users.py
experiments/utils/: evaluation.py  recommender_data_preprocessor.py
src/: app.py  recommender.py
src/data/: history_ratings.feather  movies_embeddings.feather
